# Vista-Leb

./: .gitignore  alembic.ini  main.py  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  auth.py  business.py  category.py  dependencies.py  health.py  offer.py  user.py
app/core/: config.py  logger.py  middleware.py  security.py  setup.py
app/model/: model.py
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  business.py  category.py  dependencies.py  health.py  mail_service.py  offer.py  user.py
backend/app/api/v1/schemas/: schemas.py
backend/app/core/: config.py  db.py  logger.py  middleware.py  security.py  setup.py
backend/app/model/: model.py
backend/migrations/: env.py
backend/migrations/versions/: 0f63b897b7d3_add_qr_code_fields_to_business_offer.py  V2025060615__add_business_photos.py  V2504191745__initial_tables_creation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  router.tsx  store.ts
frontend/src/components/: ImageCarousel.css  ImageCarousel.tsx  Layout.tsx  LightBox.tsx  ProfileOffers.tsx
frontend/src/pages/: AboutUs.tsx  ContactUs.tsx  Home.tsx  Login.tsx  ProfilePage.tsx  Signup.tsx  businesses.tsx
frontend/src/styles/: GlobalStyle.ts  theme.ts
frontend/src/types/: user.ts
migrations/versions/: V2504191745__initial_tables_creation.py
