[project]
name = "vista-leb"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohamed-Abbas-Homani",email = "mohamedabbashoumani@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "ruff (>=0.11.5,<0.12.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
