[project]
name = "vista-leb"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohamed-Abbas-Homani", email = "mohamedabbashoumani@gmail.com"},
    {name= "Ahmad Moussa", email = "ahmadmoussa123@gmail.com"}
]
requires-python = ">=3.11.5"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "ruff (>=0.11.5,<0.12.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "python-jose>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart (>=0.0.20,<0.0.21)",
]

# Fix: Tell poetry where to look for the main package (app/)
[tool.poetry]
packages = [{ include = "app" }]
